--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -284,7 +284,7 @@ body {
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: #333
+  color: #000000;
 }
 
 img {
@@ -2291,7 +2291,7 @@ textarea.w-select {
 body {
   background-color: #edeff2;
   font-family: 'Open Sans', sans-serif;
-  color: #6a859c;
+  color: #000000;
   font-size: 16px;
   line-height: 20px;
 }
@@ -2625,7 +2625,7 @@ p {
   margin-bottom: 6px;
   padding-bottom: 10px;
   border-bottom: 1px solid #d5d5e0;
-  color: #668cad;
+  color: #212121;
   font-size: 14px;
   font-weight: 300;
   text-decoration: none;
